; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_bridge/extr_bridge_sys.c_bridge_port_set_priority.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_bridge/extr_bridge_sys.c_bridge_port_set_priority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bridge_port = type { i8*, i64 }
%struct.ifdrv = type { i32, i32, %struct.ifbreq*, i32 }
%struct.ifbreq = type { i64, i32 }

@BRDGSIFPRIO = common dso_local global i32 0, align 4
@sock = common dso_local global i32 0, align 4
@SIOCSDRVSPEC = common dso_local global i32 0, align 4
@LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"set member %s param: ioctl(BRDGSIFPRIO) failed: %s\00", align 1
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bridge_port_set_priority(i8* %0, %struct.bridge_port* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.bridge_port*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.ifdrv, align 8
  %9 = alloca %struct.ifbreq, align 8
  store i8* %0, i8** %5, align 8
  store %struct.bridge_port* %1, %struct.bridge_port** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = getelementptr inbounds %struct.ifdrv, %struct.ifdrv* %8, i32 0, i32 3
  %11 = load i32, i32* %10, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @strlcpy(i32 %11, i8* %12, i32 4)
  %14 = getelementptr inbounds %struct.ifdrv, %struct.ifdrv* %8, i32 0, i32 0
  store i32 16, i32* %14, align 8
  %15 = getelementptr inbounds %struct.ifdrv, %struct.ifdrv* %8, i32 0, i32 2
  store %struct.ifbreq* %9, %struct.ifbreq** %15, align 8
  %16 = getelementptr inbounds %struct.ifbreq, %struct.ifbreq* %9, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.bridge_port*, %struct.bridge_port** %6, align 8
  %19 = getelementptr inbounds %struct.bridge_port, %struct.bridge_port* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  %21 = call i32 @strlcpy(i32 %17, i8* %20, i32 4)
  %22 = load i64, i64* %7, align 8
  %23 = getelementptr inbounds %struct.ifbreq, %struct.ifbreq* %9, i32 0, i32 0
  store i64 %22, i64* %23, align 8
  %24 = load i32, i32* @BRDGSIFPRIO, align 4
  %25 = getelementptr inbounds %struct.ifdrv, %struct.ifdrv* %8, i32 0, i32 1
  store i32 %24, i32* %25, align 4
  %26 = load i32, i32* @sock, align 4
  %27 = load i32, i32* @SIOCSDRVSPEC, align 4
  %28 = call i64 @ioctl(i32 %26, i32 %27, %struct.ifdrv* %8)
  %29 = icmp slt i64 %28, 0
  br i1 %29, label %30, label %38

30:                                               ; preds = %3
  %31 = load i32, i32* @LOG_ERR, align 4
  %32 = load %struct.bridge_port*, %struct.bridge_port** %6, align 8
  %33 = getelementptr inbounds %struct.bridge_port, %struct.bridge_port* %32, i32 0, i32 0
  %34 = load i8*, i8** %33, align 8
  %35 = load i32, i32* @errno, align 4
  %36 = call i32 @strerror(i32 %35)
  %37 = call i32 @syslog(i32 %31, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i8* %34, i32 %36)
  store i32 -1, i32* %4, align 4
  br label %42

38:                                               ; preds = %3
  %39 = load i64, i64* %7, align 8
  %40 = load %struct.bridge_port*, %struct.bridge_port** %6, align 8
  %41 = getelementptr inbounds %struct.bridge_port, %struct.bridge_port* %40, i32 0, i32 1
  store i64 %39, i64* %41, align 8
  store i32 0, i32* %4, align 4
  br label %42

42:                                               ; preds = %38, %30
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i32 @strlcpy(i32, i8*, i32) #1

declare dso_local i64 @ioctl(i32, i32, %struct.ifdrv*) #1

declare dso_local i32 @syslog(i32, i8*, i8*, i32) #1

declare dso_local i32 @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
